--- a/index.html
+++ b/index.html
@@ -357,13 +357,13 @@ function initUI(){
 	</div>
 	<div class="testGroup">
 		<div class="testArea">
-			<div class="testName">Jitter</div>
+			<div class="testName">Ping</div>
 			<canvas id="pingMeter" class="meter"></canvas>
 			<div id="pingText" class="meterText"></div>
 			<div class="unit">ms</div>
 		</div>
 		<div class="testArea">
-			<div class="testName">ping</div>
+			<div class="testName">Độ trễ</div>
 			<canvas id="jitMeter" class="meter"></canvas>
 			<div id="jitText" class="meterText"></div>
 			<div class="unit">ms</div>
